--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1654,7 +1654,7 @@
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
-				font-size: 13pt;
+				font-size: 16pt;
 			}
 
 		}
@@ -1662,7 +1662,7 @@
 		@media screen and (max-width: 1280px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 16pt;
 			}
 
 		}
@@ -1670,7 +1670,7 @@
 		@media screen and (max-width: 980px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 16pt;
 			}
 
 		}
@@ -2442,14 +2442,10 @@
 	}
 
 		table tbody tr {
-			border: solid 1px rgba(255, 255, 255, 0.125);
+			border: solid 0px rgba(255, 255, 255, 0.125);
 			border-left: 0;
 			border-right: 0;
 		}
-
-			table tbody tr:nth-child(2n + 1) {
-				background-color: rgba(255, 255, 255, 0.025);
-			}
 
 		table td {
 			padding: 0.75em 0.75em;
@@ -2920,7 +2916,7 @@
 	}
 
 		#menu .inner {
-			padding: 2.5em 1.5em 0.5em 1.5em ;
+			padding: 2.5em 0.5em 0.5em 0.5em ;
 			-moz-transform: translateY(0.5em);
 			-webkit-transform: translateY(0.5em);
 			-ms-transform: translateY(0.5em);
@@ -2930,7 +2926,7 @@
 			-ms-transition: opacity 0.35s ease, -ms-transform 0.35s ease;
 			transition: opacity 0.35s ease, transform 0.35s ease;
 			-webkit-overflow-scrolling: touch;
-			background: #4c5c96;
+			background: #FF0000;
 			border-radius: 5px;
 			display: block;
 			max-width: 100%;
