Performance updates all around as well as style revisions for  cleanup

--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -7,8 +7,14 @@
 /* Footer */
 
 	#footer {
+		margin-bottom: 0;
+		padding-bottom: 6.5em;
+		&::after {
+			display: none;
+		}
 		.inner {
 			@include padding(5em, 0);
+
 			@include vendor('display', 'flex');
 			@include vendor('flex-direction', 'row');
 			@include vendor('flex-wrap', 'wrap');
