--- a/src/assets/sass/base/_page.scss
+++ b/src/assets/sass/base/_page.scss
@@ -6,45 +6,38 @@
 
 /* Basic */
 
-	// MSIE: Required for IEMobile.
-		@-ms-viewport {
-			width: device-width;
-		}
+// MSIE: Required for IEMobile.
+@-ms-viewport {
+  width: device-width;
+}
 
-	// MSIE: Prevents scrollbar from overlapping content.
-		body {
-			-ms-overflow-style: scrollbar;
-		}
+// MSIE: Prevents scrollbar from overlapping content.
+body {
+  -ms-overflow-style: scrollbar;
+}
 
-	// Ensures page width is always >=320px.
-		@include breakpoint(xsmall) {
-			html, body {
-				min-width: 320px;
-			}
-		}
+// Ensures page width is always >=320px.
+@include breakpoint(xsmall) {
+  html, body {
+    min-width: 320px;
+  }
+}
 
-	body {
-		background-color:		_palette(bg);
+body {
+  background-color: _palette(bg);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/main_small.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-attachment: fixed, fixed;
+  margin: 0;
 
-		background-image:		linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
-								url('../../images/bg.jpg');
+  // Prevents animation/transition "flicker" on page load.
+  // Automatically added/removed by js/main.js.
+  &.is-loading {
+    *, *:before, *:after {
+      @include vendor('animation', 'none !important');
+      @include vendor('transition', 'none !important');
+    }
+  }
 
-		background-size:		auto,
-								cover;
-
-		background-attachment:	fixed,
-								fixed;
-
-		background-position:	center,
-								center;
-
-		// Prevents animation/transition "flicker" on page load.
-		// Automatically added/removed by js/main.js.
-			&.is-loading {
-				*, *:before, *:after {
-					@include vendor('animation', 'none !important');
-					@include vendor('transition', 'none !important');
-				}
-			}
-
-	}
+}
