--- a/src/assets/sass/custom/_youtube.scss
+++ b/src/assets/sass/custom/_youtube.scss
@@ -1,4 +1,4 @@
-.youtubePlayer {
+.youtubePlayer, .sketchfabPlayer {
   position: relative;
   padding-bottom: 56.23%;
   height: 0;
@@ -6,46 +6,42 @@
   max-width: 100%;
   background: #000;
   margin: 5px;
-}
-
-.youtubePlayer iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-  background: transparent;
-}
-
-.youtubePlayer img {
-  bottom: 0;
-  display: block;
-  left: 0;
-  margin: auto;
-  max-width: 100%;
-  width: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  border: none;
-  height: auto;
-  cursor: pointer;
-  transition: .4s all;
-}
-
-.youtubePlayer img:hover {
-  filter: brightness(75%);
-}
-
-.youtubePlayer .play {
-  height: 72px;
-  width: 72px;
-  left: 50%;
-  top: 50%;
-  margin-left: -36px;
-  margin-top: -36px;
-  position: absolute;
-  background: url("../images/play.png") no-repeat;
-  cursor: pointer;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background: transparent;
+  }
+  img {
+    bottom: 0;
+    display: block;
+    left: 0;
+    margin: auto;
+    max-width: 100%;
+    width: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border: none;
+    height: auto;
+    cursor: pointer;
+    transition: .4s all;
+    &:hover {
+      filter: brightness(75%);
+    }
+  }
+  .play {
+    height: 72px;
+    width: 72px;
+    left: 50%;
+    top: 50%;
+    margin-left: -36px;
+    margin-top: -36px;
+    position: absolute;
+    background: url("../images/play.png") no-repeat;
+    cursor: pointer;
+  }
 }
