--- a/src/assets/sass/custom/_youtube.scss
+++ b/src/assets/sass/custom/_youtube.scss
@@ -41,7 +41,7 @@
     margin-left: -36px;
     margin-top: -36px;
     position: absolute;
-    background: url("../images/play.png") no-repeat;
+    background: url("./assets/images/play.png") no-repeat;
     cursor: pointer;
   }
 }
