--- a/src/assets/sass/base/_page.scss
+++ b/src/assets/sass/base/_page.scss
@@ -25,7 +25,7 @@ body {
 
 body {
   background-color: _palette(bg);
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("./assets/images/main_small.jpg");
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("/assets/images/main_small.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-attachment: fixed, fixed;
