--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,9 +24,8 @@
         <img src="{{ imagePath }}/pic04.jpg" alt="" class="image"/>
         <div class="content">
             <h2 class="major">Virtual Reality</h2>
-            <p>We design and develop Virual Reality, Augmented Reality and Mixed Reality games and experiences.
-                <br><br>
-                We can build your idea, or help you refine it. We can deliver games or applications for Google
+            <p>We design and develop Virual Reality, Augmented Reality and Mixed Reality games and experiences.</p>
+            <p>We can build your idea, or help you refine it. We can deliver games or applications for Google
                 Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.</p>
         </div>
     </div>
@@ -40,18 +39,23 @@
             <h2 class="major">Augmented Reality</h2>
             <p>Bring to life static everyday objects, from buisness cards, to books, magazines, brochures and
                 even three dimentional items such as toys or consumer products. Overlay, animate, gamify and
-                extend your marketing materials.
-                <br><br>
-                Try it yourself, download our AR apps from the links below (Android only). Run the app and point
+                extend your marketing materials.</p>
+            <p>Try it yourself, download our AR apps from the links below (Android only). Run the app and point
                 your smartphone camera at one of our cards. If you don't have any, you can download and print
-                our <strong><a href="{{ imagePath }}/BizCard.png" target="_blank">buisness card</a></strong> or the Alien Attack
-                <strong><a
-                            href="{{ imagePath }}/AlienAttack.png" target="_blank"> game card</a></strong>.</p>
+                our <a href="{{ imagePath }}/BizCard.png" target="_blank" title="Business card download">buisness
+                    card</a> or the
+                <a
+                        href="{{ imagePath }}/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
+                    Attack
+                    game card</a>.</p>
             </p>
-            <a href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=1" target="_blank" class="button">
+
+            <a href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=1" class="button"
+               title="Business Card AR">
                 Business Card AR
             </a>
-            <a href="https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=1" target="_blank" class="button">
+            <a href="https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=1" class="button"
+               title="Alien Attack">
                 Alien Attack
             </a>
         </div>
@@ -66,12 +70,14 @@
             <h2 class="major">Software</h2>
             <p>We develop software under Windows or Linux, using C# & .Net, Matlab, C++, Java or Python. We are
                 familiar with OpenCV, EMGU, PCL, OpenNI and other CV and Image processing libraries.
-                <br><br>
+            </p>
+            <p>
                 We have experience in a wide range of fields, including virtual reality, augmented reality,
                 action recognition in video, shape detection in stills, segmentation, medical imaging, 3D
                 printing, 3D scanning and 3D reconstruction, gesture and finger detection using depth cameras,
                 optical flow, face tracking and much more.
-                <br><br>
+            </p>
+            <p>
                 With decades of combined expertise, we can develop and implement algorithms to solve real world
                 problems. We will choose the right hardware, cameras or sensors for your needs and provide a
                 start-to-finish service.</p>
@@ -82,7 +88,7 @@
 <!-- Three -->
 <section id="three" class="wrapper spotlight style3">
     <div class="inner">
-        <img src="{{ imagePath }}/pic03.jpg" alt="" class="image" />
+        <img src="{{ imagePath }}/pic03.jpg" alt="" class="image"/>
         <div class="content">
             <h2 class="major">Hardware & Sensors</h2>
             <p>We can recommend the hardware most suited for your needs, or work with the equipment you already
@@ -108,7 +114,8 @@
                 <br>
 
                 <h3 class="major">Orbital Injection - Virtual Reality game</h3>
-                <p>Our VR game is now live on <a href="http://store.steampowered.com/app/587730/">Steam</a>.
+                <p>Our VR game is now live on <a href="http://store.steampowered.com/app/587730/"
+                                                 target="_blank">Steam</a>.
                     Grab planets and toss them into a stable orbit. This is a room-scale virtual reality
                     experiance, running on the HTC Vive.</p>
 
@@ -121,10 +128,11 @@
 
                 <h3 class="major">Augmented Reality Buisness Card</h3>
                 <p>We spruced up our Packet39 Buisness cards with some Augmented Reality magic. Realtime digital
-                    3D graphics overlay, attached to a physical object. If you want to try it yourself, download
-                    the app <b><a
-                                href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0">here</a></b>
-                    (Android only). You'll need a Packet39 <b><a href="{{ imagePath }}/BizCard.png">card</a></b>, print
+                    3D graphics overlay, attached to a physical object. If you want to try it yourself, <a
+                            href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0">download
+                        the app</a>
+                    (Android only). You'll need a <a href="{{ imagePath }}/BizCard.png" target="_blank">Packet39
+                        card</a>, print
                     one if you don't have any.</p>
 
 
