Cleaning up HTML validation errors

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -44,8 +44,7 @@
                 your smartphone camera at one of our cards. If you don't have any, you can download and print
                 our <a href="{{ imagePath }}/BizCard.png" target="_blank" title="Business card download">buisness
                     card</a> or the
-                <a
-                        href="{{ imagePath }}/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
+                <a href="{{ imagePath }}/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
                     Attack
                     game card</a>.</p>
             </p>
@@ -94,7 +93,8 @@
             <p>We can recommend the hardware most suited for your needs, or work with the equipment you already
                 have. We have experience with a wide range of small board computers, cameras and sensors,
                 including Arduino, Raspberry Pi, machine vision cameras and depth cameras.
-                <br><br>
+            </p>
+            <p>
                 We can build custom hardware, testing rigs, quadcopters, robotics or tactile user interfaces. We
                 have the facilities and expertise to design, test and fabricate in-house most of the parts
                 needed for small to medium projects, allowing a very quick turnaround time. We've also worked
@@ -206,11 +206,11 @@
                     fields and disciplines, from ancient mainframes to tiny system-on-chip units. Shachar has
                     extensive experience with small board computer and low-power systems, 3D platforms like
                     OpenGL, DirectX, XNA and Three.JS. Shachar has dealt with first-tier customers like Disney,
-                    Sears, GE and Mazda.<br><br>
-
+                    Sears, GE and Mazda.</p>
+                <p>
                     Shachar usually goes by Vice, and is also a tinkerer, maker, 3d printing enthusiast and
                     photographer. Follow some of his projects on his blog <a
-                            href="http://CallMeVice.com">CallMeVice.com</a>
+                        href="http://CallMeVice.com">CallMeVice.com</a>
                 </p>
 
 
@@ -223,11 +223,11 @@
                     Computer Science and Applied Mathematics from the Weizmann Institute of Science, Israel.
                     During the past 16 years Lena has gained a lot of experience in various academic, military
                     and industrial fields. Lena's publications can be found on her website, <a
-                            href="http://www.csd.uwo.ca/~ygorelic/">csd.uwo.ca/~ygorelic/</a><br><br>
-
+                            href="http://www.csd.uwo.ca/~ygorelic/">csd.uwo.ca/~ygorelic/</a></p>
+                <p>
                     Lena is also an artist and a jeweler, she has an <a
-                            href="https://lenagorelick.wordpress.com/">art blog</a> and an Etsy store called <a
-                            href="https://nunandnoot.etsy.com/">Nun&Noot</a>.</p>
+                        href="https://lenagorelick.wordpress.com/">art blog</a> and an Etsy store called <a
+                        href="https://nunandnoot.etsy.com/">Nun&Noot</a>.</p>
             </article>
 
             <article>
@@ -235,7 +235,7 @@
                 <h3 class="major">Hossam Issacs</h3>
                 <p> Hossam is doing his post-doctorate at the Computer Science Department at the University of
                     Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a
-                            href="http://www.hisack.com/">hisack.com</a><br><br>
+                            href="http://www.hisack.com/">hisack.com</a></p>
             </article>
 
             <article>
