More html and aoda validation

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -200,7 +200,7 @@
         <h2 class="major">The Team</h2>
         <section class="features">
             <article>
-                <a href="#" class="image"><img src="{{ imagePath }}/vice.png" alt=""/></a>
+                <div class="image"><img src="{{ imagePath }}/vice.png" alt="" /></div>
                 <h3 class="major">Shachar "Vice" Weis</h3>
                 <p>Shachar is a software developer with over 20 years of experience. He has worked in many
                     fields and disciplines, from ancient mainframes to tiny system-on-chip units. Shachar has
@@ -216,7 +216,7 @@
 
             </article>
             <article>
-                <a href="#" class="image"><img src="{{ imagePath }}/lena.png" alt=""/></a>
+                <div class="image"><img src="{{ imagePath }}/lena.png" alt=""/></div>
                 <h3 class="major">Lena Gorelick</h3>
                 <p> Dr. Gorelick is currently a research scientist with the Computer Science Department at the
                     University of Western Ontario, London, Canada. Both her MSc (2004) and PhD (2009) are in
@@ -227,11 +227,11 @@
                 <p>
                     Lena is also an artist and a jeweler, she has an <a
                         href="https://lenagorelick.wordpress.com/">art blog</a> and an Etsy store called <a
-                        href="https://nunandnoot.etsy.com/">Nun&Noot</a>.</p>
+                        href="https://nunandnoot.etsy.com/">Nun&amp;Noot</a>.</p>
             </article>
 
             <article>
-                <a href="#" class="image"><img src="{{ imagePath }}/hossam.png" alt=""/></a>
+                <div class="image"><img src="{{ imagePath }}/hossam.png" alt=""/></div>
                 <h3 class="major">Hossam Issacs</h3>
                 <p> Hossam is doing his post-doctorate at the Computer Science Department at the University of
                     Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a
@@ -239,7 +239,7 @@
             </article>
 
             <article>
-                <a href="#" class="image"><img src="{{ imagePath }}/sarah.jpg" alt=""/></a>
+                <div class="image"><img src="{{ imagePath }}/sarah.jpg" alt=""/></div>
                 <h3 class="major">Sarah Legault </h3>
                 <p>Sarah is an award winning filmmaker, director, producer, animator and writer. Her first
                     stop-motion animation Dear Love earned the Best Animated Short Film award at the 2014
