Updating image alt text to be more specific

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
                 software & hardware solutions. We thrive in the space between code and the physical world and we
                 develop solutions that sense, manipulate and move around in the environment. </p>
 
-            <a href="#footer" class="button" title="Contact Us">Contact Us</a>
+            <a href="#footer" class="button" title="Click here to contact Us">Contact Us</a>
 
         </div>
     </div>
@@ -110,7 +110,7 @@
         <h2 class="major">Projects</h2>
         <section class="features">
             <article>
-                <div class="youtubePlayer" data-id="kyDiQ-KHNe0"></div>
+                <div class="youtubePlayer" data-id="kyDiQ-KHNe0" data-name="Orbital Injection - VR Game"></div>
                 <br>
 
                 <h3 class="major">Orbital Injection - Virtual Reality game</h3>
@@ -123,7 +123,7 @@
             </article>
 
             <article>
-                <div class="youtubePlayer" data-id="P7X9AR5KecE"></div>
+                <div class="youtubePlayer" data-id="P7X9AR5KecE" data-name="Augmented Reality Business Card"></div>
                 <br>
 
                 <h3 class="major">Augmented Reality Buisness Card</h3>
@@ -140,7 +140,7 @@
 
 
             <article>
-                <div class="youtubePlayer" data-id="iOc8JQwl8Cc"></div>
+                <div class="youtubePlayer" data-id="iOc8JQwl8Cc" data-name="Interactive Displays"></div>
                 <br>
 
                 <h3 class="major">Interactive displays</h3>
@@ -152,7 +152,7 @@
 
             </article>
             <article>
-                <div class="youtubePlayer" data-id="0ND8xQoi4yg"></div>
+                <div class="youtubePlayer" data-id="0ND8xQoi4yg" data-name="Laser Cutter / Engraver"></div>
                 <br>
 
                 <h3 class="major">Custom built laser cutter / engraver</h3>
@@ -182,7 +182,8 @@
 
             </article>
             <article>
-                <div class="sketchfabPlayer" data-id="89f374da58dc4a5d974bcaba16c68d7f"></div>
+                <div class="sketchfabPlayer" data-id="89f374da58dc4a5d974bcaba16c68d7f"
+                     data-name="3D Scan of a house"></div>
                 <br>
                 <h3 class="major">3D Scan of a house</h3>
                 <p>This 3D model of a house was reconstructed from 200 images, shot with a custom built
@@ -200,7 +201,7 @@
         <h2 class="major">The Team</h2>
         <section class="features">
             <article>
-                <div class="image"><img src="{{ imagePath }}/vice.png" alt="" /></div>
+                <div class="image"><img src="{{ imagePath }}/vice.png" alt=""/></div>
                 <h3 class="major">Shachar "Vice" Weis</h3>
                 <p>Shachar is a software developer with over 20 years of experience. He has worked in many
                     fields and disciplines, from ancient mainframes to tiny system-on-chip units. Shachar has
