--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -120,7 +120,7 @@
 
     &:after {
         @include vendor('transform', 'scaleY(-1)');
-        bottom: (_size(wrapper-edges, large) * -1);
+        bottom: (_size(wrapper-edges, large) * -1) + 0.1em;
         left: 0;
     }
 
