--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,7 @@
 {% extends "./layouts/layout.base" %}
 
 {% block content %}
-<!-- One -->
-<section id="one" class="wrapper spotlight style1" style="margin-top: 40%;">
+<section class="wrapper spotlight style1" style="margin-top: 40%;">
     <div class="inner">
         <img src="{{ imagePath }}/pic01.jpg" alt="" class="image"/>
         <div class="content">
@@ -11,15 +10,15 @@
             <p>We are a team of professional software developers and academics, working together to provide
                 software & hardware solutions. We thrive in the space between code and the physical world and we
                 develop solutions that sense, manipulate and move around in the environment. </p>
-
-            <a href="#footer" class="button" title="Click here to contact Us">Contact Us</a>
-
+            <p>
+                <a href="#footer" class="button" title="Click here to contact Us">Contact Us</a>
+            </p>
         </div>
     </div>
 </section>
 
 
-<section id="two" class="wrapper alt spotlight style2">
+<section class="wrapper alt spotlight style2">
     <div class="inner">
         <img src="{{ imagePath }}/pic04.jpg" alt="" class="image"/>
         <div class="content">
@@ -32,7 +31,7 @@
 </section>
 
 
-<section id="three" class="wrapper spotlight style1">
+<section class="wrapper spotlight style1">
     <div class="inner">
         <img src="{{ imagePath }}/pewpew.png" alt="" class="image"/>
         <div class="content">
@@ -48,21 +47,21 @@
                     Attack
                     game card</a>.</p>
             </p>
-
-            <a href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=1" class="button"
-               title="Business Card AR">
-                Business Card AR
-            </a>
-            <a href="https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=1" class="button"
-               title="Alien Attack">
-                Alien Attack
-            </a>
+            <p>
+                <a href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=1" class="button"
+                   title="Business Card AR">
+                    Business Card AR
+                </a>
+                <a href="https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=1" class="button"
+                   title="Alien Attack">
+                    Alien Attack
+                </a>
+            </p>
         </div>
     </div>
 </section>
 
-<!-- Two -->
-<section id="four" class="wrapper alt spotlight style2">
+<section class="wrapper alt spotlight style2">
     <div class="inner">
         <img src="{{ imagePath }}/pic02.jpg" alt="" class="image"/>
         <div class="content">
@@ -84,8 +83,7 @@
     </div>
 </section>
 
-<!-- Three -->
-<section id="three" class="wrapper spotlight style3">
+<section class="wrapper spotlight style3">
     <div class="inner">
         <img src="{{ imagePath }}/pic03.jpg" alt="" class="image"/>
         <div class="content">
@@ -105,7 +103,7 @@
 </section>
 
 
-<section id="four" class="wrapper alt style2">
+<section class="wrapper alt style2">
     <div class="inner">
         <h2 class="major">Projects</h2>
         <section class="features">
@@ -194,9 +192,7 @@
     </div>
 </section>
 
-
-<!-- Four -->
-<section id="four" class="wrapper style1">
+<section class="wrapper style1">
     <div class="inner">
         <h2 class="major">The Team</h2>
         <section class="features">
@@ -270,7 +266,7 @@
                 London, ON, Canada<br/>
                 N5X2Z8
             </li>
-            <li class="fa-phone">519-902-6191</li>
+            <li class="fa-phone"><a href="tel:5199026191">519-902-6191</a></li>
             <li class="fa-twitter"><a href="https://twitter.com/Vice_Packet39">@Vice_Packet39</a></li>
             <li class="fa-wordpress"><a href="https://callmevice.com/">CallMeVice.com</a></li>
         </ul>
