Finishing up HTML validation revisions

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -45,7 +45,7 @@
                     card</a> or the
                 <a href="{{ imagePath }}/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
                     Attack
-                    game card</a>.</p>
+                    game card</a>.
             </p>
             <p>
                 <a href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=1" class="button"
@@ -245,7 +245,7 @@
                     has won over 10 awards for her unique custom motorcycle paint work and participated in about
                     50 group exhibits in Toronto, Berlin, Krakow, or Los Angeles. Sarah’s work spans
                     illustration, stop-motion animation, doll making, painting, photography and curating
-                    multimedia shows.</a></p>
+                    multimedia shows.</p>
             </article>
 
 
