Removing unneeded scripts and starting into form submissions

--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -13,6 +13,7 @@
     }
     .inner {
         @include padding(5em, 0);
+        padding-bottom: 6em;
 
         @include vendor('display', 'flex');
         @include vendor('flex-direction', 'row');
