--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -271,7 +271,7 @@
             <li class="fa-wordpress"><a href="https://callmevice.com/">CallMeVice.com</a></li>
         </ul>
 
-        <!--<form method="post" action="#">
+        <form method="post" action="#">
             <div class="field">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name"/>
@@ -287,7 +287,7 @@
             <ul class="actions">
                 <li><input type="submit" value="Send Message"/></li>
             </ul>
-        </form>-->
+        </form>
 
     </div>
 </section>
