Finishing up seo tweaks

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -268,6 +268,7 @@
             </li>
             <li class="fa-phone"><a href="tel:5199026191">519-902-6191</a></li>
             <li class="fa-twitter"><a href="https://twitter.com/Vice_Packet39">@Vice_Packet39</a></li>
+            <li class="fa-linkedin"><a href="https://www.linkedin.com/company/packet39">Packet39</a></li>
             <li class="fa-wordpress"><a href="https://callmevice.com/">CallMeVice.com</a></li>
         </ul>
         <form method="post" id="contactForm" action="<?php echo '/app/submit.php'; ?>">
