--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -41,9 +41,9 @@
                 extend your marketing materials.</p>
             <p>Try it yourself, download our AR apps from the links below (Android only). Run the app and point
                 your smartphone camera at one of our cards. If you don't have any, you can download and print
-                our <a href="{{ imagePath }}/BizCard.png" target="_blank" title="Business card download">buisness
+                our <a href="http://packet39.com/assets/images/BizCard.png" target="_blank" title="Business card download">buisness
                     card</a> or the
-                <a href="{{ imagePath }}/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
+                <a href="http://packet39.com/assets/images/AlienAttack.png" target="_blank" title="Alien Attack game card download">Alien
                     Attack
                     game card</a>.
             </p>
