Correcting inline style issue and removing empty file

--- a/src/assets/sass/base/_page.scss
+++ b/src/assets/sass/base/_page.scss
@@ -28,6 +28,7 @@ body {
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-attachment: fixed, fixed;
+    background-image: url('./assets/images/main_small.jpg');
     margin: 0;
 
     // Prevents animation/transition "flicker" on page load.
