--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "./layouts/layout.php" %}
 
 {% block content %}
-<section class="wrapper spotlight style1" style="margin-top: 40%;">
+<section class="wrapper spotlight style1" id="firstSection">
     <div class="inner">
         <img src="{{ imagePath }}/pic01.jpg" alt="Person standing on an interactive display" class="image"/>
         <div class="content">
